DHFPROD-4216: Collapse All/Expand All buttons for Source and Entity tables in Mapping UI. DHFPROD-4216: Another fix in xml test for collapse expand (+1 squashed commit) Squashed commits: [2d1eb0dcc] DHFPROD-4216: Collapse All/Expand All buttons for Source and Entity tables in Mapping UI. DHFPROD-4216: Implement suggestions in unit/functional tests (+1 squashed commit) Squashed commits: [bf888c83e] DHFPROD-4216: Collapse All/Expand All buttons for Source and Entity tables in Mapping UI. DHFPROD-4216: Removing unnecessary debug statements (+1 squashed commit) Squashed commits: [9e93a5f55] DHFPROD-4216: Collapse All/Expand All buttons for Source and Entity tables in Mapping UI. DHFPROD-4216: Fixed few tests after updating the unique key in source table (+2 squashed commits) Squashed commits: [85100b6ac] DHFPROD-4216: Fixing issue sin collapse/expand rows and added unit tests [4d8cc289b] DHFPROD-4216: Expand all / Collapse all buttons for Mapping UI tables

--- a/marklogic-data-hub-central/ui/src/components/entities/mapping/source-entity-map/source-to-entity-map.module.scss
+++ b/marklogic-data-hub-central/ui/src/components/entities/mapping/source-entity-map/source-to-entity-map.module.scss
@@ -85,7 +85,7 @@
         display: inline-block;
         vertical-align: middle;
         //height: 5vh;
-        margin-bottom: 13px;
+        margin-bottom: 3px;
         > .entityTypeTitle{
             float: left;
             padding-top: 6px;
@@ -98,8 +98,13 @@
     > .columnOptionsSelectorContainer {
         display: inline-block;
         margin-bottom: 10px;
+        > .expandCollapseBtn {
+            width: 102px;
+            height: 32px;
+        }
         > .columnOptionsSelector{
             float: right;
+            margin-top: 10px;
         }
     }
 }
@@ -371,12 +376,13 @@ hr {
 
 .navigationCollapseButtons{
     width: 100%;
+    display: inline-block;
     justify-content: space-between;
     vertical-align: middle;
-    text-align: center;
-    padding-bottom: 4px;
+    //text-align: center;
+    //padding-bottom: 2px;
     margin-top: 2px;
-    height: 5vh;
+    height: 4.5vh;
 }
 
 .navigate_source_uris{
@@ -386,7 +392,8 @@ hr {
     vertical-align: bottom;
     justify-content: space-between;
     text-align: center;
-    margin: 0px auto;
+    margin-top: -32px;
+    margin-left: 10vw;
     white-space: nowrap;
   }
  .navigate_uris_left {
